fix(toast): alignment

--- a/src/components/toast/Toast.module.scss
+++ b/src/components/toast/Toast.module.scss
@@ -24,6 +24,10 @@
     }
   }
 
+  .dismissButton {
+    height: 24px;
+  }
+
   & svg {
     color: theme.$amino-gray-500;
   }
